Add eqcmini tool

--- a/rebar.config
+++ b/rebar.config
@@ -17,6 +17,7 @@
 {sub_dirs, ["lib/rebar"
             , "lib/edown"
             , "lib/eper"
+            , "lib/eqc"
             , "lib/meck"
             , "lib/proper"
             , "rel"
@@ -27,6 +28,7 @@
 {deps, [{rebar, ".*", {git, "git://github.com/norton/rebar.git", {branch, "master"}}}
         , {edown, ".*", {git, "git://github.com/norton/edown.git", {branch, "master"}}}
         , {eper, ".*", {git, "git://github.com/norton/eper.git", {branch, "master"}}}
+        , {eqc, ".*", {git, "git://github.com/norton/eqcmini.git", {branch, "master"}}}
         , {meck, ".*", {git, "git://github.com/norton/meck.git", {branch, "master"}}}
         , {proper, ".*", {git, "git://github.com/norton/proper.git", {branch, "master"}}}
        ]}.
