--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -22,6 +22,7 @@
        %% {app, rebar, [{incl_cond, include}]}
        %% {app, edown, [{incl_cond, include}]}
        %% {app, eper, [{incl_cond, include}]}
+       %% {app, eqc, [{incl_cond, include}]}
        %% {app, meck, [{incl_cond, include}]}
        %% {app, proper, [{incl_cond, include}]}
       ]}.
