--- a/rebar.config
+++ b/rebar.config
@@ -1,34 +1,24 @@
 %%% -*- mode: erlang -*-
 
 %% Erlang compiler options
-{erl_opts, [debug_info, fail_on_warning
-           ]}.
+{erl_opts, [debug_info, fail_on_warning]}.
 
 %% EUnit options
 {eunit_opts, [verbose]}.
-
-%% Additional library directories to add to the code path
-{lib_dirs, ["./lib"]}.
 
 %% Require OTP version R13B04 or R14
 {require_otp_vsn, "R13B04|R14"}.
 
 %% Sub directories
-{sub_dirs, ["lib/rebar"
-            , "lib/edown"
-            , "lib/eper"
-            , "lib/eqc"
-            , "lib/meck"
-            , "lib/proper"
-            , "rel"
-           ]}.
+{sub_dirs, ["rel"]}.
 
 %% Depends
 {deps_dir, "lib"}.
-{deps, [{rebar, ".*", {git, "git://github.com/norton/rebar.git", {branch, "master"}}}
-        , {edown, ".*", {git, "git://github.com/norton/edown.git", {branch, "master"}}}
-        , {eper, ".*", {git, "git://github.com/norton/eper.git", {branch, "master"}}}
-        , {eqc, ".*", {git, "git://github.com/norton/eqcmini.git", {branch, "master"}}}
-        , {meck, ".*", {git, "git://github.com/norton/meck.git", {branch, "master"}}}
-        , {proper, ".*", {git, "git://github.com/norton/proper.git", {branch, "master"}}}
+{deps, [{rebar, "", {git, "git://github.com/norton/rebar.git", {branch, "master"}}}
+        , {edown, "", {git, "git://github.com/norton/edown.git", {branch, "master"}}}
+        , {eper, "", {git, "git://github.com/norton/eper.git", {branch, "master"}}}
+        , {eqc, "", {git, "git://github.com/norton/eqcmini.git", {branch, "master"}}}
+        , {meck, "", {git, "git://github.com/norton/meck.git", {branch, "master"}}}
+        , {proper, "", {git, "git://github.com/norton/proper.git", {branch, "master"}}}
+        , {qc, "", {git, "git://github.com/norton/qc.git", {branch, "master"}}}
        ]}.
