--- a/rebar.config
+++ b/rebar.config
@@ -17,7 +17,7 @@
 {deps, [{rebar, "", {git, "git://github.com/norton/rebar.git", {branch, "master"}}}
         , {edown, "", {git, "git://github.com/norton/edown.git", {branch, "master"}}}
         , {eper, "", {git, "git://github.com/norton/eper.git", {branch, "master"}}}
-        , {eqc, "", {git, "git://github.com/norton/eqcmini.git", {branch, "master"}}}
+%%        , {eqc, "", {git, "git://github.com/norton/eqcmini.git", {branch, "master"}}}
         , {meck, "", {git, "git://github.com/norton/meck.git", {branch, "master"}}}
         , {proper, "", {git, "git://github.com/norton/proper.git", {branch, "master"}}}
         , {qc, "", {git, "git://github.com/norton/qc.git", {branch, "master"}}}
