Enable support for R15

--- a/rebar.config
+++ b/rebar.config
@@ -1,13 +1,13 @@
 %%% -*- mode: erlang -*-
 
 %% Erlang compiler options
-{erl_opts, [debug_info, fail_on_warning]}.
+{erl_opts, [debug_info, warnings_as_errors]}.
 
 %% EUnit options
 {eunit_opts, [verbose]}.
 
-%% Require OTP version R13B04 or R14
-{require_otp_vsn, "R13B04|R14"}.
+%% Require OTP version R13B04, R14, or R15
+{require_otp_vsn, "R13B04|R14|R15"}.
 
 %% Sub directories
 {sub_dirs, ["rel"]}.
