--- a/rebar.config
+++ b/rebar.config
@@ -1,23 +1,15 @@
 %%% -*- mode: erlang -*-
 
-%% Erlang compiler options
-{erl_opts, [debug_info, warnings_as_errors]}.
-
-%% EUnit options
-{eunit_opts, [verbose]}.
-
-%% Require OTP version R13B04, R14, or R15
 {require_otp_vsn, "R13B04|R14|R15"}.
 
-%% Sub directories
-{sub_dirs, ["rel"]}.
+{erl_opts, [warnings_as_errors]}.
 
-%% Depends
-{deps_dir, "lib"}.
-{deps, [{rebar, "", {git, "git://github.com/norton/rebar.git", {branch, "master"}}}
-        , {edown, "", {git, "git://github.com/norton/edown.git", {branch, "master"}}}
-        , {eper, "", {git, "git://github.com/norton/eper.git", {branch, "master"}}}
-        , {meck, "", {git, "git://github.com/norton/meck.git", {branch, "master"}}}
-        , {proper, "", {git, "git://github.com/norton/proper.git", {branch, "master"}}}
-        , {qc, "", {git, "git://github.com/norton/qc.git", {branch, "master"}}}
+{xref_checks, [undefined_function_calls, deprecated_function_calls]}.
+
+{deps, [{rebar, "", {git, "git://github.com/norton/rebar.git"}}
+        , {eper, "", {git, "git://github.com/norton/eper.git"}}
+        , {meck, "", {git, "git://github.com/norton/meck.git"}}
+        , {proper, "", {git, "git://github.com/norton/proper.git"}}
+        , {triq, "", {git, "git://github.com/norton/triq.git"}}
+        , {qc, "", {git, "git://github.com/norton/qc.git"}}
        ]}.
