--- a/rebar.config
+++ b/rebar.config
@@ -1,6 +1,6 @@
 %%% -*- mode: erlang -*-
 
-{require_otp_vsn, "R13B04|R14|R15|R16"}.
+{require_otp_vsn, "R13B04|R14|R15|R16|17"}.
 
 {erl_opts, [warnings_as_errors]}.
 
