Upgrade to 19 and rebar3

--- a/rebar.config
+++ b/rebar.config
@@ -1,14 +1,15 @@
 %%% -*- mode: erlang -*-
 
-{require_otp_vsn, "R13B04|R14|R15|R16|17"}.
+{minimum_otp_vsn, "19"}.
 
 {erl_opts, [warnings_as_errors]}.
 
 {xref_checks, [undefined_function_calls, deprecated_function_calls]}.
 
-{deps, [{rebar, "", {git, "git://github.com/norton/rebar.git"}}
-        , {eper, "", {git, "git://github.com/norton/eper.git"}}
-        , {meck, "", {git, "git://github.com/norton/meck.git"}}
-        , {proper, "", {git, "git://github.com/norton/proper.git"}}
-        , {qc, "", {git, "git://github.com/norton/qc.git"}}
+{deps, [{rebar, {git, "git://github.com/norton/rebar.git"}}
+        , {rebar3, {git, "git://github.com/norton/rebar3.git"}}
+        , {eper, {git, "git://github.com/norton/eper.git"}}
+        , {meck, {git, "git://github.com/norton/meck.git"}}
+        , {proper, {git, "git://github.com/norton/proper.git"}}
+        , {qc, {git, "git://github.com/norton/qc.git"}}
        ]}.
